test/oscar/compiler/errors/mutInitTypeMismatch.oscar
message testNow()


actor Tester() {
  mut int x = 1.0;
  
  receive = {
    | testNow() => {
        Println(x);
    }
  }
}

def main() => unit = {
  actor<Tester> tester = spawn actor<Tester>();
  message<testNow>() |> tester;
}